--- a/LoginService.API/appsettings.json
+++ b/LoginService.API/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=LoginDb;Trusted_Connection=True;"
+    },
+    "Jwt": {
+        "Key": "Sunny88"
     }
-  },
-  "AllowedHosts": "*"
 }
+
