Arreglo a los Controllers

--- a/LoginService.API/appsettings.json
+++ b/LoginService.API/appsettings.json
@@ -8,10 +8,8 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=LoginDb;Trusted_Connection=True;"
-    },
-    "Jwt": {
-        "Key": "Sunny88"
+        "DefaultConnection": "Server=DESKTOP-NMSLG7H;Database=LoginDb;User Id=CVCGrupo1;Password=CVCGrupo1;Encrypt=False;"
     }
+
 }
 
